# ChumSa_Rust_VectorEngine

./: Cargo.toml  build.rs  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
benches/: engine_benchmark.rs
benchmarks_history/: 2025-07-02_CRUD_baseline_1k_docs.md  2025-07-02_baseline_1k_docs.md  2025-07-08_instant_distance.md
proto/: engine.proto
src/: distance.rs  lib.rs  structures.rs  utils.rs  wasm_api.rs
src/components/: mod.rs  searchcache.rs  vectorindex.rs
src/models/: document.rs  engine.rs  errors.rs  mod.rs  point.rs  search_cache.rs
tests/: distance_cosine_test.rs  struct_document_test.rs  structures_test.rs  vector_engine_test.rs
