[package]
name = "rust_vector_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lru = "0.15.0"
prost = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.84"
ahash = "0.7.8"
instant-distance = "0.6.1"

# WASM 빌드를 위한 getrandom 설정
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

# 빌드 시점에만 필요한 의존성을 별도로 관리
[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "engine_benchmark"
harness = false
